[package]
name = "adventofcode2021"
version = "0.1.0"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2021"

[dependencies]
anyhow = "1"
sqrid = "0"
# sqrid = { git = "https://github.com/lpenz/sqrid", branch = "devel" }
# sqrid = { path = "/home/lpenz/Sync/projs/github-0-ok/sqrid" }
andex = "0"
nom = "7"
itertools = "0"
lazy_static = "1"
rayon = "1"
dashmap = "5"
