[package]
name = "adventofcode2021"
version = "0.1.0"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2021"

[dependencies]
anyhow = "1.0.57"
sqrid = "0.0.11"
# sqrid = { git = "https://github.com/lpenz/sqrid", branch = "devel" }
# sqrid = { path = "/home/lpenz/Sync/projs/github-0-ok/sqrid" }
andex = "0.0.14"
nom = "7.1.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
rayon = "1.5.3"
dashmap = "5.3.4"
